@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+  <herd>java</herd>
+  <longdescription lang="en">
+    A mature Java-based RSS/RDF/Atom Newsreader with advanced features.
+  </longdescription>
+</pkgmetadata>
+
